--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,14 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+* {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  font-size: 14px;
+}
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: black;
+  overflow: scroll;
 }
