--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
   font-size: 14px;
 }
 body {
-  color: rgb(var(--foreground-rgb));
+  color: white;
   background-color: black;
   overflow: scroll;
 }
